Added 2 more dorsual entries

--- a/dorsual/templates/index.html
+++ b/dorsual/templates/index.html
@@ -66,12 +66,14 @@
 	            <option value="Dorsual_Sigle">Sigle Bern</option>
 				<option value="Speziell">Speziell</option>
 				<option value="StAAG_modern">StAAG modern</option>
-	                        <option value="Dorsual_StAAG">StAAG Signatur</option>
-	                        <option value="Dorsual_StAAG-Stempel">StAAG Stempel</option>
+				<option value="Dorsual_StAAG">StAAG Signatur</option>
+				<option value="Dorsual_StAAG-Stempel">StAAG Stempel</option>
 				<option value="Dorsual_Textualis">Textualis, Orte und Siglen</option>
 				<option value="uber_1">ùber (Besitz Agnes)</option>
 				<option value="uber_2">ùber (Nicht Besitz Agnes)</option>
 				<option value="uber_3">ùber nach 1380</option>
+				<option value="uber_4">ùber 4</option>
+				<option value="uber_5">ùber 5</option>
 				<option value="Unleserlich">Unleserlich</option>
 				<option value="Unsicher">Unsicher</option>
 			</select>
