Added correct Zahl and Kopialbuchverweis entries.

--- a/dorsual/templates/index.html
+++ b/dorsual/templates/index.html
@@ -46,11 +46,13 @@
 				<option value="Eckig">Eckig</option>
 				<option value="Fricker">Fricker</option>
 				<option value="HGA_Stempel">HGA Stempel</option>
-				<option value="Dorsual_Jahreszahl-Eins">Zahl (1)</option>
-	                        <option value="Dorsual_Jahreszahl-Zwei">Zahl (2)</option>
-	                        <option value="Dorsual_Jahreszahl-Drei">Jahreszahl dreistellig</option>
-	                        <option value="Dorsual_Jahreszahl-Vier">Jahreszahl vierstellig</option>
+				<option value="Dorsual_Jahreszahl-Eins">Zahl1-VERALTET</option>
+				<option value="Dorsual_Jahreszahl-Zwei">Zahl2-VERALTET</option>
+				<option value="Zahl">Zahl</option>
+				<option value="Dorsual_Jahreszahl-Drei">Jahreszahl dreistellig</option>
+				<option value="Dorsual_Jahreszahl-Vier">Jahreszahl vierstellig</option>
 				<option value="Kanzleihand">Kanzleihand-Hofmeisterei</option>
+				<option value="Kopialbuch">Kopialbuchverweis</option>
 				<option value="Kopie">Kopieverweis</option>
 				<option value="Kurrent">Kurrent</option>
 				<option value="Latein_1">Latein</option>
